test/fixture/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
  labels:
    app.kubernetes.io/name: service
    app.kubernetes.io/version: 3.2.1
    app.kubernetes.io/component: backend
spec:
  selector:
    label:
      app.kubernetes.io/name: service
      app.kubernetes.io/version: 3.2.1
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: service
        app.kubernetes.io/version: 3.2.1
        app.kubernetes.io/component: backend
    spec:
      containers:
      - name: service
        image: service:3.2.1
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mounthPath: /etc/service
          name: config
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: service
