test/fixture/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app.kubernetes.io/name: service
    app.kubernetes.io/component: load-balancer
spec:
  selector:
    app.kubernetes.io/name: service
    app.kubernetes.io/component: backend
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
